<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roomTabLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_tab_layout_height"
    android:layout_gravity="bottom"
    android:layout_marginBottom="@dimen/room_controls_height">

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes" />

</com.google.android.material.tabs.TabLayout>