<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="1dp"
    app:contentInsetEnd="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetStart="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLinkText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:text="@string/room_link"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@id/btnLogout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/redScale3"
            android:fontFamily="sans-serif"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            app:icon="@drawable/ic_leave"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="btnLogout, tvLinkText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilRoomLink"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_rect"
            android:backgroundTint="@color/grayScale4"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/redScale3"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOpenLink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRoomLink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/https_prefix"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:lineSpacingExtra="4sp"
                android:maxLines="1"
                android:textColor="@color/grayScale2"
                android:textColorHint="@color/grayScale2"
                android:textSize="17sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnOpenLink"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="6dp"
            android:rotation="270"
            android:src="@drawable/ic_arrow_down"
            android:tint="@color/grayScale4"
            app:layout_constraintBottom_toBottomOf="@id/ilRoomLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ilRoomLink" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.MaterialToolbar>